{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 27,
  "lineage": "3bea54b3-a1f0-b65f-17b7-852797ff3603",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "eigw-00e1bc336af69436c",
            "vpc_id": "vpc-022404b259acdc5e7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fdfd52f274ba0d38",
            "association_id": "eipassoc-0627e9d49f8c4e865",
            "domain": "vpc",
            "id": "eipalloc-0fdfd52f274ba0d38",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0cae0f25f825977f1",
            "private_dns": "ip-10-77-0-30.eu-west-3.compute.internal",
            "private_ip": "10.77.0.30",
            "public_dns": "ec2-15-236-162-112.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.236.162.112",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ex-1-vpc-nat-gateway-1"
            },
            "tags_all": {
              "Name": "ex-1-vpc-nat-gateway-1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:969342696885:internet-gateway/igw-0df9296158b4100aa",
            "id": "igw-0df9296158b4100aa",
            "owner_id": "969342696885",
            "tags": {
              "Name": "ex-1-vpc-public-igw"
            },
            "tags_all": {
              "Name": "ex-1-vpc-public-igw"
            },
            "vpc_id": "vpc-022404b259acdc5e7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fdfd52f274ba0d38",
            "connectivity_type": "public",
            "id": "nat-0d4315284c7f691df",
            "network_interface_id": "eni-0cae0f25f825977f1",
            "private_ip": "10.77.0.30",
            "public_ip": "15.236.162.112",
            "subnet_id": "subnet-01e8ee16b6f809f84",
            "tags": {
              "Name": "ex-1-vpc-nat-gateway"
            },
            "tags_all": {
              "Name": "ex-1-vpc-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.private",
            "aws_internet_gateway.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-043f750dce9b924a91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d4315284c7f691df",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-043f750dce9b924a9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.main",
            "aws_eip.private",
            "aws_internet_gateway.public",
            "aws_nat_gateway.private",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0df9296158b4100aa",
            "id": "r-rtb-04088e071d844b7c41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04088e071d844b7c4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.public",
            "aws_vpc.main",
            "aws_internet_gateway.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:969342696885:route-table/rtb-043f750dce9b924a9",
            "id": "rtb-043f750dce9b924a9",
            "owner_id": "969342696885",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d4315284c7f691df",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ex-1-vpc-private-rt"
            },
            "tags_all": {
              "Name": "ex-1-vpc-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-022404b259acdc5e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:969342696885:route-table/rtb-04088e071d844b7c4",
            "id": "rtb-04088e071d844b7c4",
            "owner_id": "969342696885",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0df9296158b4100aa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ex-1-vpc-public-rt"
            },
            "tags_all": {
              "Name": "ex-1-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-022404b259acdc5e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e46a2df1851bca7a",
            "route_table_id": "rtb-043f750dce9b924a9",
            "subnet_id": "subnet-0ebaae3fea5a440b9"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.main",
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c81a2446e1aa3362",
            "route_table_id": "rtb-043f750dce9b924a9",
            "subnet_id": "subnet-015e9c90ad3469f69"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.main",
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c91df3da0be1ee44",
            "route_table_id": "rtb-04088e071d844b7c4",
            "subnet_id": "subnet-01e8ee16b6f809f84"
          },
          "dependencies": [
            "data.aws_availability_zones.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0345843a809ac6a4e",
            "route_table_id": "rtb-04088e071d844b7c4",
            "subnet_id": "subnet-01f9835204b43b366"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:969342696885:subnet/subnet-0ebaae3fea5a440b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.77.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebaae3fea5a440b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "969342696885",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ex-1-vpc-private-subnet-1",
              "Subent": "Private",
              "Tier": "Private",
              "eks": "ex-1-vpc",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ex-1-vpc-private-subnet-1",
              "Subent": "Private",
              "Tier": "Private",
              "eks": "ex-1-vpc",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-022404b259acdc5e7"
          },
          "dependencies": [
            "data.aws_availability_zones.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:969342696885:subnet/subnet-015e9c90ad3469f69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.77.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015e9c90ad3469f69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "969342696885",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ex-1-vpc-private-subnet-2",
              "Subent": "Private",
              "Tier": "Private",
              "eks": "ex-1-vpc",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ex-1-vpc-private-subnet-2",
              "Subent": "Private",
              "Tier": "Private",
              "eks": "ex-1-vpc",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-022404b259acdc5e7"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:969342696885:subnet/subnet-01e8ee16b6f809f84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.77.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e8ee16b6f809f84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "969342696885",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ex-1-vpc-public-subnet-1",
              "Subent": "Public",
              "Tier": "Public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ex-1-vpc-public-subnet-1",
              "Subent": "Public",
              "Tier": "Public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-022404b259acdc5e7"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:969342696885:subnet/subnet-01f9835204b43b366",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.77.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f9835204b43b366",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "969342696885",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ex-1-vpc-public-subnet-2",
              "Subent": "Public",
              "Tier": "Public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ex-1-vpc-public-subnet-2",
              "Subent": "Public",
              "Tier": "Public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-022404b259acdc5e7"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:969342696885:vpc/vpc-022404b259acdc5e7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.77.0.0/16",
            "default_network_acl_id": "acl-09174a38e6540bb81",
            "default_route_table_id": "rtb-09109ba0af6113228",
            "default_security_group_id": "sg-0687c0f00d0771afb",
            "dhcp_options_id": "dopt-09ca5053a57b1a071",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-022404b259acdc5e7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09109ba0af6113228",
            "owner_id": "969342696885",
            "tags": {
              "Name": "ex-1-vpc"
            },
            "tags_all": {
              "Name": "ex-1-vpc"
            }
          }
        }
      ]
    }
  ]
}